--- a/html/index.html
+++ b/html/index.html
@@ -29,13 +29,10 @@
                     <a href="#home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#course" class="nav-link">Course</a>
-                </li>
-                <li class="nav-item">
                     <a href="teams.html#team-a" class="nav-link">Team A</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#team-b" class="nav-link">Team B</a>
+                    <a href="teams.html#team-b" class="nav-link">Team B</a>
                 </li>
                 <li class="nav-item">
                     <a href="#teachers" class="nav-link">Teachers</a>
@@ -120,8 +117,8 @@
                 
                 <div class="container-fluid col-md-6 col-sm-12">
                     <div class="text-left">
-                        <h1 class="team-bio-text">Team A</h1>
-                        <h5 class="team-bio-text-2">#22300A</h5>
+                        <h1 class="team-bio-text">Team B</h1>
+                        <h5 class="team-bio-text-2">#22300B</h5>
                     </div>
                     <div class="container">
                         <p class="center-align-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -143,32 +140,17 @@
     </div>
     <!--End Team B Section-->
 
-    <!--Start Resources Section-->
-    <div class="offset" id="team-members">
-
-        <div class="fixed-background">
-            <div class="row dark">
-                <div class="col-12">
-                    <h3 class="heading">Built With Care</h3>
-                    <div class="heading-underline"></div>
-                </div>
-            </div>
-            <div class="fixed-wrap">
-                <div class="fixed"></div>
-            </div>
-        </div>
+    <!--Start Teachers Section-->
+    <div class="offset" id="Teachers">
 
     </div>
-    
-    <!--End Resources Section-->
-
-    <!--Start Teachers Section-->
-    <div class="offset" id="Teachers"></div>
 
     <!--End Teachers Section-->
 
     <!--Start Contact Section-->
-    <div class="offset" id="Contact"></div>
+    <div class="offset" id="Contact">
+
+    </div>
 
     <!--End Contact Section-->
 
