--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/indexstyle.css">
+    <link rel="stylesheet" href="./css/indexstyle.css">
     <script src="https://kit.fontawesome.com/7d31bda283.js" crossorigin="anonymous"></script>
     <title>Tualatin Robotics</title>
     <link rel="shortcut icon" href="../Assets/Timberwolf.png">
@@ -58,9 +58,8 @@
 
     <div class="caption text-center">
         <h1> Teams 22300AB</h1>
-        <h5>#22300ab</h5>
-        <a href="#team-a" class="btn btn-outline-light btn-lg">Team A</a>
-        <a href="#team-b" class="btn btn-outline-light btn-lg">Team B</a>
+        <h3>Take a look around!</h3>
+        <a href="#course" class="btn btn-outline-light btn-lg">Get Started</a>
     </div>
     <!--End Landing Page Section-->
     <!--End Home Section-->
@@ -83,8 +82,8 @@
         <!--Start Jumbotron-->
         <div class="jumbotron">
             <div class="narrow row dark-text">
-                <div class="col-md-2"></div>
-                    <div class="col-md-4 text-center">
+                
+                    <div class="col-md-6 text-center">
                         <img class="img-fluid" src="../Assets/TeamPhoto.png" alt="TeamPhoto">
                     </div>
 
@@ -99,11 +98,11 @@
                                 magna aliqua.</p>
                             </div>
                         </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 text-sm-top text-sm-right">
                         <h1 class="dark-text-main">Team A</h1>
                         <h5 class="dark-text-fade">#22300A</h5>
                     </div>
-                    <div class="col-md-2"></div>
+                        
             </div>
         </div>
     </div>
@@ -140,6 +139,34 @@
             </div>
     </div>
     <!--End Team B Section-->
+
+    <!--Start Teachers Section-->
+    <div class="offset" id="Teachers">
+
+    </div>
+
+    <!--End Teachers Section-->
+
+    <!--Start Contact Section-->
+    <div class="offset" id="Contact">
+
+    </div>
+
+    <!--End Contact Section-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
 
