--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html"><img src="../Assets/TualatinRoboticsLogoV2.1.png" alt="TualatinRoboticsLogo"></a>
+        <a class="navbar-brand" href="index.html"><img src="https://raw.githubusercontent.com/ll-Art-ll/TualatinRobotics.github.io/main/Assets/TualatinRoboticsLogoV2.1.png" alt="TualatinRoboticsLogo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
