--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/indexstyle.css">
+    <link rel="stylesheet" href="../css/indexstyle.css">
     <script src="https://kit.fontawesome.com/7d31bda283.js" crossorigin="anonymous"></script>
     <title>Tualatin Robotics</title>
     <link rel="shortcut icon" href="../Assets/Timberwolf.png">
