--- a/html/index.html
+++ b/html/index.html
@@ -82,18 +82,22 @@
 
     <!--Start Team A Section-->
     <div class="offset" id="row1"> 
-        <div class="col-12 py-1"></div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="row img-text">
-                    <div class="col-md-6  info-text">
-                        <img src="../Assets/TeamImgResizepng.png" alt="TeamPhoto">
-                    </div>
-                    <div class="col-md-4 info-text">
-                        <div class="textbox">
-                            <h2>What we do</h2>
+        <div class="jumbotron dark">
+            <div class="narrow row">
+                <div class="col-12 py-1"></div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row img-text">
+                            <div class="col-md-6  info-text">
+                                <img src="../Assets/TeamImgResizepng.png" alt="TeamPhoto">
+                            </div>
+                            <div class="col-md-4 info-text">
+                                <div class="textbox">
+                                    <h2>What we do</h2>
+                                </div>
+                                <p class="para-info-text">sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext  </p>
+                            </div>
                         </div>
-                        <p class="para-info-text">sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext  </p>
                     </div>
                 </div>
             </div>
@@ -103,7 +107,7 @@
 
     <!--Start Team B Section-->
     <div class="offset" id="row2">
-        <div class="jumbotron" id="jumbotron-1">
+        <div class="jumbotron light">
             <div class="narrow row dark-text">
 
                 <div class="col-12 py-1"></div>
@@ -117,7 +121,7 @@
                                 <p class="para-info-text">sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext  </p>
                             </div>
                             <div class="col-md-6 offset-md-1 info-text">
-                                <img src="../Assets/TeamImgResizepng.png" alt="TeamPhoto">
+                                <img src="../Assets/TeamImgResizepng.png"class="img-fluid" alt="TeamPhoto">
                             </div>
                         </div>
                     </div>
@@ -130,43 +134,45 @@
 
     <!--Start Dealing with Covid Section-->
     <div class="offset" id="row3">
-        <div class="col-12 py-1"></div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row img-text">
-                        <div class="col-md-6 info-text">
-                            <img src="../Assets/TeamImgResizepng.png" alt="TeamPhoto">
-                        </div>
-                        <div class="col-md-4 info-text">
-                            <div class="textbox">
-                                <h2>Dealing with Covid</h2>
+        <div class="jumbotron dark">
+            <div class="narrow row">
+                <div class="col-12 py-1"></div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row img-text">
+                            <div class="col-md-6  info-text">
+                                <img src="../Assets/TeamImgResizepng.png" alt="TeamPhoto">
                             </div>
-                            <p class="para-info-text">sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext  </p>
+                            <div class="col-md-4 info-text">
+                                <div class="textbox">
+                                    <h2>What we do</h2>
+                                </div>
+                                <p class="para-info-text">sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext  </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
+        </div>
     </div>
     <!--End Team B Section-->
 
     <!--Start Dealing with Covid Section-->
     <div class="offset" id="ourteams">
-        <div class="jumbotron " id="jumbotron-2">
-            <div class="narrow row dark-text">
-                <div class="col-12 py-3 text-center main-text">
-                    <div class="textbox justify-content-center">
-                        <h1>Our Teams</h1>
-                    </div>
-                </div>
+        <div class="jumbotron light text-center main-text pb-0 m-0 ">
+            <div class=" narrow textbox justify-content-center dark-text">
+                <h1>Our Teams</h1>
+            </div>
+        </div>
+        <div class="jumbotron light py-3 mt-0">
+            <div class="narrow row dark-text"></div>
 
-                <div class="card-deck justify-content-center">
+                <div class="card-deck justify-content-center dark-text">
                     <div class="card col-md-3">
                         <img class="card-img-top" src="../Assets/tualatin-high-logo.png" alt="Card image cap">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Dusty Long</h5>
+                        <p class="card-text">MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
@@ -180,24 +186,111 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-        </div>
-        <div class="row">
         </div>
     </div>
     <!--End Team B Section-->
 
     <!--Start Teachers Section-->
     <div class="offset" id="Teachers">
+        <div class="jumbotron dark text-center main-text pb-0 m-0 ">
+            <div class=" narrow textbox justify-content-center">
+                <h1>Our Teams</h1>
+            </div>
+        </div>
+        <div class="jumbotron dark py-3">
+            <div class="narrow row dark-text"></div>
 
+                <div class="card-deck justify-content-center dark-text">
+                    <div class="card col-md-3">
+                        <img class="card-img-top" src="../Assets/tualatin-high-logo.png" alt="Card image cap">
+                        <div class="card-body">
+                        <h5 class="card-title">Dusty Long</h5>
+                        <p class="card-text">MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                    <div class="col-1 "></div>
+                    <div class="card offset-md-1 col-md-3">
+                        <img class="card-img-top" src="../Assets/tualatin-high-logo.png" alt="Card image cap">
+                        <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--End Teachers Section-->
+
+    <!--Start Teachers Section-->
+    <div class="offset" id="Teachers">
+        <div class="landing">
+            <div id="home-wrap">
+                <div id="banner-text">
+                    <h1 style="font-size:50px">Vex Robotics Team</h1>
+                    <h3>2019-2020</h3>
+                </div>
+                <div class="graylayer">
+                    <div class="home-inner" id="banner-img">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!--End Teachers Section-->
+
+    <!--Start Teachers Section-->
+    <div class="offset" id="Teachers">
+        <div class="jumbotron dark text-center main-text pb-0 m-0 ">
+            <div class=" narrow textbox justify-content-center">
+                <h1>Competition Attended</h1>
+            </div>
+        </div>
+        <div class="jumbotron dark py-3">
+            <div class="narrow row dark-text"></div>
+
+            <div class="card-group">
+                <div class="card">
+                  <img src="../Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+        </div>
     </div>
 
     <!--End Teachers Section-->
 
     <!--Start Contact Section-->
     <div class="offset" id="Contact">
-
+        <div class="jumbotron">
+            <div class="narrow row"></div>
+        </div>
     </div>
 
     <!--End Contact Section-->
