--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/indexstyle.css">
+    <link rel="stylesheet" href="/css/indexstyle.css">
     <script src="https://kit.fontawesome.com/7d31bda283.js" crossorigin="anonymous"></script>
     <title>Tualatin Robotics</title>
-    <link rel="shortcut icon" href="../Assets/Timberwolf.png">
+    <link rel="shortcut icon" href="/Assets/Timberwolf.png">
 </head>
 <body data-spy="scroll" data-target="#navbarResponsive">
 
@@ -18,7 +18,7 @@
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html"><img src="https://raw.githubusercontent.com/ll-Art-ll/TualatinRobotics.github.io/main/Assets/TualatinRoboticsLogoV2.1.png" alt="TualatinRoboticsLogo"></a>
+        <a class="navbar-brand" href="index.html"><img src="/Assets/TualatinRoboticsLogoV2.1.png" alt="TualatinRoboticsLogo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,7 +59,7 @@
         </div>
     </div>
     <div class="caption text-center">
-        <img src="../Assets/TualatinRoboticsLogoV2.1.png" alt="TualatinRobotics">
+        <img src="/Assets/TualatinRoboticsLogoV2.1.png" alt="TualatinRobotics">
         <h3>Tualatin, Oregon</h3>
         <a href="#course" class="btn btn-outline-light btn-lg">Get Started</a>
     </div>
@@ -89,7 +89,7 @@
                     <div class="col-md-12">
                         <div class="row img-text">
                             <div class="col-md-6  info-text">
-                                <img src="../Assets/TeamImgResizepng.png" alt="TeamPhoto">
+                                <img src="/Assets/TeamImgResizepng.png" alt="TeamPhoto">
                             </div>
                             <div class="col-md-4 info-text">
                                 <div class="textbox">
@@ -121,7 +121,7 @@
                                 <p class="para-info-text">sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext sometext  </p>
                             </div>
                             <div class="col-md-6 offset-md-1 info-text">
-                                <img src="../Assets/TeamImgResizepng.png"class="img-fluid" alt="TeamPhoto">
+                                <img src="/Assets/TeamImgResizepng.png"class="img-fluid" alt="TeamPhoto">
                             </div>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                     <div class="col-md-12">
                         <div class="row img-text">
                             <div class="col-md-6  info-text">
-                                <img src="../Assets/TeamImgResizepng.png" alt="TeamPhoto">
+                                <img src="/Assets/TeamImgResizepng.png" alt="TeamPhoto">
                             </div>
                             <div class="col-md-4 info-text">
                                 <div class="textbox">
@@ -169,7 +169,7 @@
 
                 <div class="card-deck justify-content-center dark-text">
                     <div class="card col-md-3">
-                        <img class="card-img-top" src="../Assets/tualatin-high-logo.png" alt="Card image cap">
+                        <img class="card-img-top" src="/Assets/tualatin-high-logo.png" alt="Card image cap">
                         <div class="card-body">
                         <h5 class="card-title">Dusty Long</h5>
                         <p class="card-text">MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG</p>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="col-1 "></div>
                     <div class="card offset-md-1 col-md-3">
-                        <img class="card-img-top" src="../Assets/tualatin-high-logo.png" alt="Card image cap">
+                        <img class="card-img-top" src="/Assets/tualatin-high-logo.png" alt="Card image cap">
                         <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -203,7 +203,7 @@
 
                 <div class="card-deck justify-content-center dark-text">
                     <div class="card col-md-3">
-                        <img class="card-img-top" src="../Assets/tualatin-high-logo.png" alt="Card image cap">
+                        <img class="card-img-top" src="/Assets/tualatin-high-logo.png" alt="Card image cap">
                         <div class="card-body">
                         <h5 class="card-title">Dusty Long</h5>
                         <p class="card-text">MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG MR.LONG</p>
@@ -212,7 +212,7 @@
                     </div>
                     <div class="col-1 "></div>
                     <div class="card offset-md-1 col-md-3">
-                        <img class="card-img-top" src="../Assets/tualatin-high-logo.png" alt="Card image cap">
+                        <img class="card-img-top" src="/Assets/tualatin-high-logo.png" alt="Card image cap">
                         <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -257,7 +257,7 @@
 
             <div class="card-group">
                 <div class="card">
-                  <img src="../Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
+                  <img src="/Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -265,7 +265,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="../Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
+                  <img src="/Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -273,7 +273,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="../Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
+                  <img src="/Assets/tualatin-high-logo.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
